# strata

./: .gitignore  CHANGELOG.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
examples/: hello.R  hello.py  hello.rb
strata/: __init__.py
tests/: test_strata.py
